--- a/index.html
+++ b/index.html
@@ -23,6 +23,6 @@
     </main>
 
     <script src="indexeddb.js"></script>
-    <script src="app.js"></script>
+    <script src="script.js"></script>
 </body>
 </html>
