--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <button id="saveButton">Save Data</button>
         <button id="loadButton">Load Data</button>
         <button id="deleteButton">Delete Data</button>
-        <div id="dataDisplay"></div>
+        <div id="dataDisplay"><h3>Retrieved Data : </h3><br></div>
     </main>
 
     <script src="indexeddb.js"></script>
