--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Simple PWA</title>
-    <link rel="stylesheet" href="style.css">
-    <link rel="manifest" href="manifest.json">
+    <link rel="stylesheet" href="./style.css">
+    <link rel="manifest" href="./manifest.json">
 </head>
 <body>
     <header>
@@ -22,7 +22,7 @@
         <div id="dataDisplay"><h3>Retrieved Data : </h3><br></div>
     </main>
 
-    <script src="indexeddb.js"></script>
-    <script src="script.js"></script>
+    <script src="./indexeddb.js"></script>
+    <script src="./script.js"></script>
 </body>
 </html>
