--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Simple PWA</title>
-    <link rel="stylesheet" href="./style.css">
-    <link rel="manifest" href="./manifest.json">
+    <link rel="stylesheet" href="style.css">
+    <link rel="manifest" href="manifest.json">
 </head>
 <body>
     <header>
@@ -13,6 +13,8 @@
     </header>
     <main>
         <p>This is a simple Progressive Web App.</p>
+
+        <button onclick="subscribeToNotifications()">Subscribe to Notifications</button>
 
         <input type="text" name="inp" id="inp" placeholder="Enter...">
 
@@ -22,7 +24,7 @@
         <div id="dataDisplay"><h3>Retrieved Data : </h3><br></div>
     </main>
 
-    <script src="./indexeddb.js"></script>
-    <script src="./script.js"></script>
+    <script src="indexeddb.js"></script>
+    <script src="script.js"></script>
 </body>
 </html>
