--- a/index.html
+++ b/index.html
@@ -14,7 +14,9 @@
     <main>
         <p>This is a simple Progressive Web App.</p>
 
+        <button onclick="askNotificationPermission()">Enable Notifications</button>
         <button onclick="subscribeToNotifications()">Subscribe to Notifications</button>
+        <button onclick="sendNotifications()">Send Notification</button>
 
         <input type="text" name="inp" id="inp" placeholder="Enter...">
 
